# DexprOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-clang.bash  build-gcc.bash  build-mingw.bash  build.bash  generate-img.bash  quick-build-and-run.bash
cmake/Boot/: CMakeLists.txt
cmake/Kernel/: CMakeLists.txt
cmake/cross-compile-toolchains/: x86_64-uefi-clang-generic.cmake  x86_64-w64-mingw32-generic.cmake
include/DexprOS/: DexprOSCommon.h  Shell.h  font256.h
include/DexprOS/Boot/x86_64-efi/: EmbeddedKernel.h  EndBootPhase.h  InitialPageMapSetup.h  InitialPageMapSwitch.h
include/DexprOS/Drivers/: PICDriver.h  PS2ControllerDriver.h
include/DexprOS/Drivers/Graphics/: CpuGraphicsDriver.h  GraphicsDriver.h
include/DexprOS/Drivers/Keyboard/: KeyToUnicodeTable.h  PS2KeyboardDriver.h  PS2KeyboardScanCodes.h  USKeyboardLayout.h
include/DexprOS/Kernel/: BuiltInBitmapFont.h  DexprOSCommon.h  ErrorDisplay.h  KernelAssert.h  KernelPanic.h  KeyboardInput.h  PhysicalMemMap.h
include/DexprOS/Kernel/Memory/: InitialLinearAllocator.h  InitialMemMap.h  MemoryDef.h  Paging.h  PhysicalMemMap.h  PhysicalMemMapGen.h  PhysicalMemStructsGen.h  PhysicalMemTree.h  PhysicalMemTreeGen.h
include/DexprOS/Kernel/efi/: EfiMemMapIteration.h  InitialMemMapGenEfi.h  PhysicalMemMapEfi.h  PhysicalMemStructsGenEfi.h  PhysicalMemTreeGenEfi.h
include/DexprOS/Kernel/kstdlib/: string.h
include/DexprOS/Kernel/x86_64/: CpuFeatures.h  CpuidRetrieve.h  FloatingPointInit.h  GdtCreator.h  GdtLoader.h  GdtSetup.h  IdtCreator.h  InlineAsm.h  InterruptHandlers.h  Interrupts.h  KernelInit.h  KernelPanicHalt.h  KernelStartInfo.h  MemoryProtectionCpuSetup.h  PageMapSwitching.h  PagingSettings.h  StartupVirtMapCreator.h  StartupVirtMapSwitch.h  SyscallHandler.h  TaskStateSegment.h
src/: Shell.c
src/Boot/x86_64-efi/: EmbeddedKernel.S  EndBootPhase.c  InitialPageMapSetup.c  InitialPageMapSwitch.S  InitialPageMapSwitch.s  UefiBoot.c
src/Drivers/: PICDriver.c  PS2ControllerDriver.c
src/Drivers/Graphics/: CpuGraphicsDriver.c  GraphicsDriver.c
src/Drivers/Keyboard/: KeyToUnicodeTable.c  PS2KeyboardDriver.c  USKeyboardLayout.c
src/Kernel/: BuiltInBitmapFont.c  ErrorDisplay.c  KernelAssert.c  KernelPanic.c  KeyboardInput.c  PhysicalMemMap.c  kmain.c
src/Kernel/Memory/: InitialLinearAllocator.c  InitialMemMap.c  MemoryDef.c  PhysicalMemMap.c  PhysicalMemMapGen.c  PhysicalMemStructsGen.c  PhysicalMemTree.c  PhysicalMemTreeGen.c
src/Kernel/efi/: EfiMemMapIteration.c  InitialMemMapGenEfi.c  PhysicalMemMapEfi.c  PhysicalMemStructsGenEfi.c  PhysicalMemTreeGenEfi.c
src/Kernel/kstdlib/: string.c
src/Kernel/x86_64/: CpuFeatures.c  CpuidRetrieve.S  CpuidRetrieve.s  FloatingPointInit.S  FloatingPointSymbols.c  GdtCreator.c  GdtLoader.S  GdtLoader.s  GdtSetup.c  IdtCreator.c  InlineAsm.c  InterruptHandlers.c  Interrupts.s  KernelInit.c  KernelPanicHalt.S  KernelStartInfo.c  MemoryProtectionCpuSetup.S  MemoryProtectionCpuSetup.s  PageMapSwitching.s  PagingSettings.c  StartupVirtMapCreator.c  StartupVirtMapSwitch.S  SyscallHandler.s  TaskStateSegment.c
tests/KernelStringH/: CMakeLists.txt  KernelStringHTest.c
tests/PhysMemManagement/: CMakeLists.txt  InitialMemMapGenEfi_manual_alloc.c  main.c
toolchains/clang-x86_64-efi/: x86_64-uefi-clang-generic.cmake
toolchains/clang-x86_64-kernel-elf/: x86_64-elf-clang-generic.cmake
toolchains/gcc-x86_64-kernel-elf/: x86_64-elf-gcc-generic.cmake
toolchains/mingw-x86_64-efi/: x86_64-w64-mingw32-generic.cmake
util/util-font-gen/: CMakeLists.txt  build-and-generate.bash
util/util-font-gen/src/: DexprBitmapFontGenerator.c
